<resources>
    <string name="app_name">Sistem Pelayanan Booking Hotel Sapphire</string>

    <string name="home_room_list">Room List</string>
    <string name="home_booking_list">My Booking</string>
    <string name="home_gallery">Gallery</string>
    <string name="home_location">Location</string>
    <string name="home_info">Info</string>
    <string name="home_myaccount">My Account</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Tidak punya akun? Daftar disini</string>
    <string name="login_pt">SAPPHIRE HOME HOTEL</string>

    <string name="register">Daftar</string>
    <string name="register_name">Nama Lengkap</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_konfirmasi_password">Konfirmasi Password</string>
    <string name="register_alamat">Alamat</string>
    <string name="register_telepon">Nomor HP</string>

    <string name="link">http://ngoding.chatomz.com/cikara_hotel</string>

    <string name="update">Update</string>
</resources>
